<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityUserAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:text="@string/add_a_new_user"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/id_spinner_reg_user_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/id_et_reg_user_fname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_firstname"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <EditText
            android:id="@+id/id_et_reg_user_lname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_last_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/id_et_reg_user_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_user_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/id_et_reg_user_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_address"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/id_et_reg_user_city"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_city"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/id_et_reg_user_occupation"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_occupation"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/id_et_reg_user_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_phone_number"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/id_et_reg_user_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/id_et_reg_user_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <EditText
            android:id="@+id/id_et_reg_user_conf_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <EditText
            android:id="@+id/id_et_reg_user_fax"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/str_user_add_ph_fax"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <Button
            android:id="@+id/id_btn_add_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:height="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/str_user_add_btn_save" />

    </LinearLayout>


</ScrollView>